# NANIGameEngine

./: CMakeLists.txt  NANIGameEngine.sln  NANIGameEngine.vcxproj  NANIGameEngine.vcxproj.filters  README.md  imgui.ini  structure.txt
TP/bullet3/lib/Debug/: LinearMath_Debug.lib
TP/bullet3/lib/Release/: BulletCollision.lib  BulletDynamics.lib  LinearMath.lib
TP/glad/include/glad/: glad.h
TP/glad/src/: glad.c
TP/glfw/lib/Debug/: glfw3.lib
TP/glfw/lib/Release/: glfw3.lib
src/: main.cpp
